adding upcoming singing; improving anchor link formatting

--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,14 @@ body {
     border-bottom: 2px solid #56d3fc;
 }
 
+#map-link {
+    text-decoration: underline;
+}
+
+#map-link:hover {
+    color: #007bff;
+}
+
 #map {
     border: 0;
     width: 100%;
