--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ body {
 /*     border-top: 2px solid #56d3fc; */
 /*     border-bottom: 2px solid #56d3fc; */
     margin-bottom: 1rem;
-    padding: 1rem 0 0 0;
+    padding: 1rem 0 0;
     background-color: #ffea004d;
 }
 
