--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,6 @@ a:hover {
     background-color: rgba(255, 104, 104, 0.5)
 }
 
-#upcoming-singings p {
+#upcoming-singings p, #notification p {
     margin-bottom: 0
 }
